ingress_ai.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aigateway-ingress
  namespace: accessibilita
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: aimusei.local
      http:
        paths:
          - path: /ai-gateway/cheshire(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: aigateway-cheshire
                port:
                  number: 80

          - path: /ai-gateway/middleware(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: aigateway-middleware
                port:
                  number: 80
