ingress_public.yaml
# ingress-pubblico-manuale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aimusei-ingress-pubblico-manuale # Nome diverso per evitare conflitti
  namespace: aimusei
spec:
  ingressClassName: nginx
  rules:
    - host: "api-coll.museiitaliani.it"
      http:
        paths:
          # PRIMA LA REGOLA PIÙ SPECIFICA (Backend)
          - path: /aimusei/api
            pathType: Prefix
            backend:
              service:
                name: aimusei-be-service
                port:
                  number: 8090

          # DOPO LA REGOLA PIÙ GENERICA (Frontend)
          - path: /aimusei
            pathType: Prefix
            backend:
              service:
                name: aimusei-fe-service
                port:
                  number: 80
